Renames for consistency.