@@ -10,14 +10,14 @@ public class LoomValidationErrorTest extends BaseTestClass {
     var issue = ValidationIssue.builder("foo").summary("a test").build();
     var error = new LoomValidationError(issue);
     assertThat(error.getIssues()).hasSize(1);
-    assertThat(error.getIssues().get(0)).isEqualTo(issue);
+    assertThat(error.getIssues().getFirst()).isEqualTo(issue);
 
     var error2 = new LoomValidationError(issue.toBuilder());
     assertThat(error2.getIssues()).hasSize(1);
-    assertThat(error2.getIssues().get(0)).isEqualTo(issue);
+    assertThat(error2.getIssues().getFirst()).isEqualTo(issue);
 
     var error3 = new LoomValidationError(List.of(issue));
     assertThat(error3.getIssues()).hasSize(1);
-    assertThat(error3.getIssues().get(0)).isEqualTo(issue);
+    assertThat(error3.getIssues().getFirst()).isEqualTo(issue);
   }
 }
